# KB_BS_local-hybrid-researcher

./: .env.example  .gitignore  CLAUDE.md  IMPROVEMENT.md  PRD.md  README.md  pyproject.toml
.claude/commands/: documentation-update.md
.claude/skills/code_review/references/: security_checklist.md
docs/: agent-design.md  architecture.md  configuration.md  data-models.md  data-sources.md  ideas.md  implementation.md  rabbithole-magic.md  references.md
kb/: document_registry.json
src/: __init__.py  config.py  main.py  prompts.py
src/agents/: __init__.py  graph.py  nodes.py  state.py  tools.py
src/models/: __init__.py  hitl.py  query.py  research.py  results.py
src/services/: __init__.py  chromadb_client.py  hitl_service.py  ollama_client.py
src/ui/: app.py  state.py
src/ui/components/: __init__.py  hitl_panel.py  preliminary_results.py  progress_status.py  query_input.py  results_view.py  safe_exit.py  task_rendering.py  todo_approval.py  todo_display.py  todo_side_panel.py
src/utils/: debug_state.py
tests/: __init__.py  conftest.py  rabbithole_analysis.md  test_agents.py  test_models.py  test_reference_extraction.py  test_services.py  test_task_search_queries.py
