[project]
name = "kb-bs-local-hybrid-researcher"
version = "2.2.0"
description = "Local hybrid researcher with deep reference-following using Ollama and ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Rabbithole-Agent Team" }]
dependencies = [
    # LangChain v1.0+ ecosystem
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-ollama>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=1.0.0",
    "langgraph>=1.0.0",
    # Embeddings (Qwen3-Embedding-0.6B via HuggingFace)
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    # Data & Storage
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # PDF & UI
    "streamlit>=1.28.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    # Retry logic
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
web = [
    "tavily-python>=0.3.0",
]

[project.scripts]
researcher = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
